--- a/3.html_basic(2).html
+++ b/3.html_basic(2).html
@@ -8,8 +8,8 @@
 <body>
     <h2>회원가입 form태그 예제</h2>
     <!-- action은 제출할 서버의 url 주소를 입력 -->
-     <!-- form에 기본 text만 담겨있을 경우에는 application/x-www-form-urlencoded -->
-     <!-- form에 파일까지 포함되어 있는 경우에는 multipart/form-data -->
+     <!-- form에 기본 text만 담겨있을 경우에는 application/x-www-form-urlencoded <외웁시다>-->
+     <!-- form에 파일까지 포함되어 있는 경우에는 multipart/form-data <외웁시다> -->
     <form action="https://naver.com" method="post" enctype="multipart/form-data">
         <div>
             <!-- label의 for은 input의 id를 찾아 매핑된다 -->
@@ -84,6 +84,7 @@
         <div>
             <button type="submit"> 회원가입완료(버튼)</button>
         </div>
+
 
 
     </form>
