--- a/5.html_css_js_basic.html
+++ b/5.html_css_js_basic.html
@@ -28,6 +28,17 @@
             color: yellow;
         }
     </style>
+    <script>
+        function updateDemo1(){
+            document.getElementById("demo1").innerHTML="hello world1";
+        }
+        document.getElementById("load1").innerHTML="hello world load1";
+
+    </script>
+    <!-- 외부 js import 시에 아래와 같이 선언언 -->
+    <script src="js/myjs.js">
+
+    </script>
 </head>
 <body>
     <!-- css적용방법 3가지: 인라인, 내부스타일, 외부스타일 -->
@@ -55,6 +66,30 @@
         <p>첫번째 단락</p5>
         <section><p>두번째 단락</p></section>
     </div>
+
+    <h2>jvascript 예시</h2>
+
+    <p id="demo1">변경될 내용 1</p>
+    <button onclick="updateDemo1()">변경 버튼1</button> <!-- 클릭하면 변경 내용이 변경되도록 -->
+    <p id="demo2">변경될 내용 2</p>
+    <button onclick="updateDemo2()">변경 버튼2</button> <!-- 클릭하면 변경 내용이 변경되도록 -->
+    <p id="demo3">변경될 내용 3</p>
+    <button onclick="updateDemo3()">변경 버튼2</button> <!-- 클릭하면 변경 내용이 변경되도록 -->
+    
+
+    <h2>js 로드 순서</h2>
+    <p id="load1">js 로드1</p>
+    <p id="load2">js 로드2</p>
+
+
+
+    <script>
+        document.getElementById("load2").innerHTML="hello world load2";
+        function updateDemo2(){
+            document.getElementById("demo2").innerHTML="hello world2";
+        }
+    </script>
+
     
 </body>
 </html>
