--- a/9.js_basic.html
+++ b/9.js_basic.html
@@ -48,7 +48,7 @@
             const obj2 ={obj1}; //  {obj1:{key1:'value1'}}
             console.log(obj2);
 
-            //      스프레드 문법: ...키워드를 통해 obj3 객체릐 요소를 obj4에서 사용.
+            //      스프레드 문법: ...키워드를 통해 obj3 객체의의 요소를 obj4에서 사용.
             const obj3 = {a:1, b:2};
 
             const obj4 = {...obj3, c:3}; // {a:1, b:2, c:3}
