--- a/11.js_function.html
+++ b/11.js_function.html
@@ -127,6 +127,7 @@
         }
         function scrollEvent(){
             // window.addEventListener('scroll',()=>console.log("hello world")); 아래와 같은 구문
+            // 스크롤이 트리거가 된다
             window.addEventListener('scroll',function(){console.log("hello world")});
         }
         function addItem(){
