--- a/12.js_practice.html
+++ b/12.js_practice.html
@@ -16,8 +16,8 @@
             <option value="divided">나눗셈</option>
 
         </select><br>
-        <input type="text1" id ="first"><br>
-        <input type="text2" id ="second"><br>
+        <input type="text" id ="first"><br>
+        <input type="text" id ="second"><br>
         <button onclick="calculator()">연산실행</button>
     </div>
     <div id = "result">결과값</div>
